fix overflow x issue

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@
   user-select: none; /* Standard syntax */
   scroll-behavior: smooth;
 }
+/* html{
+  overflow-x: hidden;
+
+} */
 
 body {
   width: 100%;
